[package]
name = "simple-blockchain"
version = "0.1.0"
authors = ["Adam Puchała <adam.puchala@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.5"
rsa = { version = "0.5.0", features = ["serde"] }
rand = "0.8.4"
serde = { version = "1.0.127", features = ["derive"] }
serde_derive = "*"
serde_json = "*"
serde-big-array = "0.3.2"
